brilliantapp/k8s/60-deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brilliantapp
  namespace: brilliant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brilliantapp
  template:
    metadata:
      labels:
        app: brilliantapp
    spec:
      containers:
        - name: web
          image: brilliantapp:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
