brilliantapp/k8s/50-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: brilliant
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
